# BoardGame4Cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  simple_build.sh  strorage_log.txt
Client/: App.cpp  CMakeLists.txt  simple_build.sh
Client/Client/: App.cpp  pch.hpp
Client/Client/Game/: CustomComponent.hpp  GameLayer.cpp  GameLayer.hpp
Client/Client/Game/Scene/: GameScene.cpp  GameScene.hpp  RobbyScene.cpp  RobbyScene.hpp  SceneWrapper.hpp
Client/Client/Game/Systems/: ChessGraphicSystem.cpp  ChessGraphicSystem.hpp  CustomComponent.cpp  CustomComponent.hpp  IndicatorSystem.cpp  IndicatorSystem.hpp  TestSystem.cpp  TestSystem.hpp
Client/Client/Network/: GameSession.cpp  GameSession.hpp  NetworkManager.cpp  NetworkManager.hpp  ServerPacketHandler.cpp  ServerPacketHandler.hpp
Client/Client/Utils/: ObjectListPanel.cpp  ObjectListPanel.hpp  ResourceManager.cpp  ResourceManager.hpp  Utils.hpp
Client/Graphic/: GameLayer.cpp  GameLayer.hpp
DawnBoard/: CMakeLists.txt
DawnBoard/DawnBoard/Base/: DataStruct.hpp  Field.hpp  Object.hpp
DawnBoard/DawnBoard/Chess/: ChessAction.hpp  ChessBoard.cpp  ChessBoard.hpp  ChessBoardState.hpp  ChessObject.cpp  ChessObject.hpp  Utils.hpp
DawnBoard/DawnBoard/Chess/Logic/: ChessAction.hpp  ChessBoard.cpp  ChessBoard.hpp  ChessBoardState.hpp  ChessField.cpp  ChessField.hpp  ChessFieldState.hpp
DawnBoard/DawnBoard/Chess/Object/: ChessObject.cpp  ChessObject.hpp
Server/: CMakeLists.txt
Server/Server/: App.cpp  ClientPacketHandler.cpp  ClientPacketHandler.hpp  GameSession.cpp  GameSession.hpp  Player.hpp  Room.cpp  Room.hpp  RoomManager.cpp  RoomManager.hpp  SessionManager.cpp  SessionManager.hpp  pch.hpp
Server/Server/Packet/: Protocol.pb.h
test/: a  main.cpp
tools/: PacketGenerator
tools/PacketGenerator/: MakePacket.sh
